# Simple-Game

./: .gitignore  Cargo.toml  README.md  main.rs
BreakOut/: Cargo.toml
BreakOut/src/: main.rs
src/: app_state.rs  constants.rs  end_state.rs  game_state.rs  input_state.rs  main.rs  main_state.rs  player_state.rs  server.rs  state_func.rs  stay_state.rs  title_state.rs  wait_state.rs
