[package]
name = "compat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
rand = "0.7.3"
serde = "1.0"
serde_json = "1.0"
socket2 = "0.4"
net2 = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["full"]